--- a/assets/scss/objects/_objects.wrappers.scss
+++ b/assets/scss/objects/_objects.wrappers.scss
@@ -5,9 +5,13 @@
   height: 100%;
 
   &__inner {
+    background-color: #fff;
+    border-radius: 12px;
     margin-bottom: auto;
     margin-top: auto;
-    max-width: 380px;
+    max-width: fit-content;
+    min-width: 300px;
+    padding: 32px 40px;
     width: 100%;
 
     &--start {
